--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
           <li><a href="about.html">Sobre Mim</a></li>
+          <li><a href="bot.html">Bot Discord</a></li>
         </ul>
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
