--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
     </div>
     <div class="col-md-10 col-md-offset-1 space">
       <p>Ola! Me chamo Vitor Bruno conhecido como "VB" ou "LunarVB".</p>
-      <p>Sou um indie developer e estudante do ensino medio. Atualmente faço jogos/criações por hobby e por interesse na area de tecnologia.</p>
+      <p>Sou um indie developer, estudante do ensino medio e estudante da ciencia da computação (Harvard). Atualmente faço jogos/criações por hobby e por interesse na area de tecnologia.</p>
       <p>Comecei fazendo jogos pela primeira vez em 2016, na plataforma do roblox. Desde então me apaixonei na area de fazer jogos e continuei apartir de então. Em 2021 tive meu primeiro contato com uma game engine fora da plataforma do roblox chamada "Clickteam Fusion 2.5". Apartir dai fiz o meu primeiro jogo que se chamava "Pong", um simples jogo de ping pong. Depois tive o meu primeiro contato com o "GameMaker Studio 2" que é a game engine que utilizo atualmente para programar!. Nela fiz o meu primeiro e unico jogo chamado "Space Shooters" e hoje estou treinando para poder fazer um jogo incrivel e bom.</p>
     </div>
   </div>
