--- a/about.html
+++ b/about.html
@@ -29,6 +29,8 @@
         <ul class="primary-nav">
           <li><a href="about.html">Sobre Mim</a></li>
           <li><a href="bot.html">Bot Discord</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="luna.html">Game Engine</a></li>
         </ul>
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
