--- a/faq.html
+++ b/faq.html
@@ -36,6 +36,7 @@
                   <li><a href="about.html">Sobre mim</a></li>
                   <li><a href="bot.html">Bot Discord</a></li>
                   <li><a href="faq.html">FAQ</a></li>
+                  <li><a href="luna.html">Game Engine</a></li>
                 </ul>
               </nav>
               <a href="index.html" class="nav-toggle">Menu<span></span></a> </div>
